@@ -532,66 +532,3 @@ find_close(void)
 	opened = 0;
 }
 #endif /* !HAVE_FIND */
-
-/*
- * Fast gfind_XXX() using GPATH.
- *
- * gfind_xxx() does almost same with find_xxx() but much faster,
- * because gfind_xxx() use GPATH (file index).
- * If GPATH exist then you should use this.
- */
-#include "dbop.h"
-#include "gtagsop.h"
-
-static DBOP	*dbop;
-static int      opened;
-static int      first;
-static char	prefix[MAXPATHLEN+1];
-
-/*
- * gfind_open: start iterator using GPATH.
- */
-void
-gfind_open(dbpath, local)
-char	*dbpath;
-char	*local;
-{
-	char *path;
-
-	assert(opened == 0);
-	assert(first == 0);
-	path = strdup(makepath(dbpath, dbname(GPATH), NULL));
-	if (path == NULL)
-		die("short of memory.");
-	dbop = dbop_open(path, 0, 0, 0);
-	free(path);
-	if (dbop == NULL)
-		die("GPATH not found.");
-	strcpy(prefix, (local) ? local : "./");
-	opened = 1;
-	first = 1;
-}
-/*
- * gfind_read: read path without GPATH.
- *
- *	r)		path
- */
-char	*
-gfind_read()
-{
-	assert(opened == 1);
-	if (first) {
-		first = 0;
-		return dbop_first(dbop, prefix, NULL, DBOP_KEY | DBOP_PREFIX);
-	}
-	return dbop_next(dbop);
-}
-/*
- * gfind_close: close iterator.
- */
-void
-gfind_close(void)
-{
-	dbop_close(dbop);
-	opened = first = 0;
-}
