@@ -37,5 +37,8 @@ void	gpath_put(const char *);
 void	gpath_delete(const char *);
 void	gpath_close(void);
 int	gpath_nextkey(void);
+void	gfind_open(char *, char *);
+char	*gfind_read(void);
+void	gfind_close(void);
 
 #endif /* ! _PATHOP_H_ */
